<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dstar_lite</name>
  <version>0.0.0</version>
  <description>dstar_lite planner</description>
  <maintainer email="shaileshpawar320@gmail.com">shailesh</maintainer>
  <license>dstar_lite</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>dstar_lite_interfaces</depend>
  <depend>rclcpp_action</depend>
<depend>visualization_msgs</depend>
  <depend>rclcpp_lifecycle</depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
